Maggi.js/Maggi.UI.css
/* ... */
.mui ::-webkit-scrollbar-corner,
.mui-light ::-webkit-scrollbar-corner
{
	display:none;
}

.invisible {
	display: none;
}

.popup {
	position: absolute;
	top:0;
	left:0;
	margin:16px !important; 
	z-index:99999;
}

.popup.invisible {
	visibility: hidden;
	display:initial;
}

.visibilityanimate {
	visibility: visible;
	transition: opacity 350ms ease, visibility 0s linear;
	opacity: 1;
}

.visibilityanimate.invisible {
	visibility: hidden;
	opacity: 0;
	transition: opacity 350ms ease, visibility 0s linear 350ms;
}

.mui-light .popup > .popup-triangle-wrapper,
.mui .popup > .popup-triangle-wrapper {
	overflow: hidden;
	position: fixed;
	height:17px;
	margin: 0px;
	margin-top:-17px;
	padding: 0px;
}

.mui-light .popup > .popup-triangle-wrapper > .popup-triangle-inner,
.mui .popup > .popup-triangle-wrapper > .popup-triangle-inner {
	margin:5.142135624px;
	width: 22.627px;
	height: 22.627px;
	transform: rotate(45deg);
	transform-origin: 50% 50%;
	background: white;
}

.mui-light .popup > .popup-triangle-wrapper > .popup-triangle-inner,
.mui-light.popup > .popup-triangle-wrapper > .popup-triangle-inner {
	border: 1px solid gray;
	background: white;
}

.mui .popup > .popup-triangle-wrapper > .popup-triangle-inner,
.mui.popup > .popup-triangle-wrapper > .popup-triangle-inner {
	border: 1px solid hsla(224, 8%, 15%, 1);
	background: hsla(224, 8%, 30%, 1); //var(--mui-normal-color);
}


@font-face {
	font-family: 'Open Sans';
	font-style: normal;
	font-weight: 400;
	src: local('Open Sans'), local('OpenSans'), url(Open Sans.woff) format('woff'), url(https://themes.googleusercontent.com/static/fonts/opensans/v8/cJZKeOuBrn4kERxqtaUH3T8E0i7KZn-EPnyo3HZu7kw.woff) format('woff');
}

.mui {
	color:white;
	font-family: 'Open Sans', sans-serif;
	background:hsla(224, 8%, 30%, 1); //var(--mui-normal-color);
	font-size: 18px;
	font-weight: normal;
	text-shadow: none;
	text-align: left;
}

.mui-light {
	color:black;
	font-family: 'Open Sans', sans-serif;
	background:white;
	font-size: 18px;
	font-weight: normal;
	text-shadow: none;
	text-align: left;
}

.mui-light.disabled,
.mui-light .disabled,
.mui-light .input.disabled input,
.mui.disabled,
.mui .disabled,
.mui .input.disabled input {
	color:darkgray;
}
/*
.mui-light .popup > #title,
.mui .popup > #title {
	text-align: center;
	margin: 0px;
	padding: 10px;
	background: hsla(224, 8%, 40%, 0.5);
	border-top-left-radius: 7px;
	border-top-right-radius: 7px;
}

.mui .popup > #title {
	background: hsla(224, 8%, 36%, 1);
}

.mui-light .popup > #title {
	background: hsla(0, 0%, 80%, 1);
}

.mui-light .popup > *,
.mui .popup > * {
	margin:10px;
}
*/

.mui .popup,
.mui.popup {
	background: hsla(224, 8%, 30%, 1); /*var(--mui-normal-color);*/
	border-radius:8px;
	border:1px solid hsla(224, 8%, 15%, 1);
	box-shadow:0 0 100px black;
}

.mui-light .popup,
.mui-light.popup {
	background:white;
	border-radius:8px;
	border:1px solid gray;
	box-shadow: 0px 0px 100px rgba(0,0,0,0.5);
}

/* SIMPLELIST, TABLELIST */

.mui-light.simplelist,
.mui-light .simplelist,
.mui-light.tablelist,
.mui-light .tablelist {
	border-top:1px solid gray;
	border-bottom:1px solid gray;
	background:hsla(0, 0%, 95%, 1);
}
.mui.simplelist,
.mui .simplelist,
.mui.tablelist,
.mui .tablelist {
	border-top:1px solid hsla(224, 8%, 15%, 1); //var(--mui-dark-color);
	border-bottom:1px solid hsla(224, 8%, 15%, 1); //var(--mui-dark-color);
	background:hsla(224, 8%, 36%, 1); //var(--mui-light-color);
}

.mui-light .tablelist > *:first-child,
.mui-light.tablelist > *:first-child,
.mui .tablelist > *:first-child,
.mui.tablelist > *:first-child {
	border-top:0;
}

.mui .simplelist > *,
.mui .tablelist > * > * {
	border-bottom:1px solid hsla(224, 8%, 15%, 1); //var(--mui-dark-color);
}

.mui-light .simplelist > *,
.mui-light .tablelist > * > * {
	border-bottom:1px solid gray;
}
/*
.mui .simplelist > .cols > *:first-child {
    border-bottom:1px solid black;
} 
*/
.mui .simplelist > *,
.mui-light .simplelist > * {
    margin-left: 15px;
	padding:5px 10px 5px 0;
}
 
.mui .simplelist > .cols > *:first-child,
.mui-light .simplelist > .cols > *:first-child {
    margin-left:0;
}

.mui-light .simplelist > *:last-child,
.mui .simplelist > *:last-child,
.mui-light .tablelist > *:last-child > *,
.mui .tablelist > *:last-child > * {
	border-bottom:none;
}
.mui-light .tablelist > *:last-child > *:first-child,
.mui .tablelist > *:last-child > *:first-child {
	border-bottom:none;
}
.mui-light .tablelist > * > *:first-child {
	border-bottom:1px solid hsla(0, 0%, 95%, 1);
}
.mui .tablelist > * > *:first-child {
	border-bottom:1px solid hsla(224, 8%, 36%, 1);
}

.mui-light .selectable.selected,
.mui .selectable.selected,
.mui-light.tablelist.selectable > .selected,
.mui-light .tablelist.selectable > .selected,
.mui.tablelist.selectable > .selected,
.mui .tablelist.selectable > .selected {
	background: hsla(200, 87%, 50%, 1);
	color:inherit;
}

.mui-light .simplelist > .selectable.selected,
.mui .simplelist > .selectable.selected,
.mui-light.tablelist.selectable > .selected,
.mui-light .tablelist.selectable > .selected,
.mui.tablelist.selectable > .selected,
.mui .tablelist.selectable > .selected {
	border-left: 15px solid hsla(200, 87%, 50%, 1);
	margin-left: 0;
}

.mui .simplelist > .selectable.disabled:hover,
.mui.tablelist.selectable > *.disabled:hover,
.mui .tablelist.selectable > *.disabled:hover{
	border-left: 0;
	margin-left: 15px;
}

.mui .simplelist > .selectable:hover,
.mui.tablelist.selectable > *:hover,
.mui .tablelist.selectable > *:hover{
	border-left: 15px solid hsla(224, 8%, 50%, 1);
	margin-left: 0;
}

.mui .selectable:hover,
.mui.tablelist.selectable > *:hover,
.mui .tablelist.selectable > *:hover{
	background:hsla(224, 8%, 50%, 1);
}
/* ... */

